Edits to FCC Tribute page HTML and CSS files

--- a/fcc_tribute_page/css/style.css
+++ b/fcc_tribute_page/css/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
-/*FCC code to set rem calculation*/
+/*FCC code to set rem calculation-from tribute page code sample*/
 html{
     /* Setting a base font size of 10px to assist with rem calculation
     Info: 1rem === 10px, 1.5rem === 15px, 2rem === 20px, etc.
