Added global styles, masthead styling, changed product layout to media styles, minor changes to HTML and additional minor changes to CSS

--- a/fcc_product_landing_page/css/style.css
+++ b/fcc_product_landing_page/css/style.css
@@ -4,6 +4,31 @@
     margin: 0; 
 }
 
+h1, h3 {
+    font-family: 'Crimson Text', 'sans-serif';
+    font-size: 3rem; 
+    color: white; 
+}
+
+h2 {
+    font-family: 'Crimson Text', 'sans-serif';
+    font-size: 2rem; 
+    color: white;   
+}
+
+p {
+    font-family: 'Work Sans', 'sans-serif';
+    font-size: 1rem; 
+    line-height: 1.5rem;
+    color: white;  
+}
+
+button {
+    font-family: 'Work Sans', 'sans-serif';
+    font-size: 1rem; 
+    line-height: 1.5rem;
+}
+
 /*Header Section Styles*/
 #header{
     top: 0; 
@@ -11,7 +36,9 @@
     background-color: white;
 }
 .navbar {
-    color: #000C0D; 
+    font-family: 'Work Sans', 'sans-serif';
+    font-size: 1rem; 
+    color: #011F26; 
     display: flex; 
     justify-content: space-around;
     align-items: center;
@@ -29,16 +56,51 @@
 
 .navbar a {
     text-decoration: none;
-    color: #000C0D; 
+    color: #011F26; 
 }
 
 .navbar a:hover{
-    color: aqua;
+    color: #10828F;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 #header-img {
     height: 5rem; 
     width: auto; 
+}
+
+/*Masthead Section Styles*/
+#masthead{
+    background-image: url(../resources/skiLineup.jpg);
+    height: 65vh; 
+    width: 100%; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.masthead-text {
+    margin: 0 auto 2rem 5rem; 
+    padding: 5rem .5rem 0 .5rem;  
+}
+
+.masthead-button {
+    margin: 0 auto 2rem 5rem; 
+    padding: 5rem .5rem 0 .5rem; 
+    background-color: white;
+    border: 1px solid white; 
+    padding: 1rem; 
+    width: auto;  
+    border-radius: 0px 50px;
+    color: #025159; 
+}
+
+.masthead-button:hover {
+    background-color: transparent;
+    border: 1px solid white; 
+    font-weight: bold;
+    color: white; 
 }
 
 /* Product Section Styles */
@@ -49,6 +111,10 @@ div {
 }
 
 .product-container {
+    display: flex;
+}
+
+.product-container2 {
     display: flex;
 }
   
@@ -89,7 +155,7 @@ div {
     border: 1px solid #7EF1E0; 
     padding: 1rem; 
     width: auto;  
-    border-radius: 15px 50px;
+    border-radius: 0px 50px;
     color: #025159; 
 }
 
@@ -104,7 +170,7 @@ div {
     border: 1px solid #B2EBE2; 
     padding: 1rem; 
     width: auto; 
-    border-radius: 15px 50px;
+    border-radius: 0px 50px;
     color: #07524A; 
 }
 
@@ -148,6 +214,14 @@ div {
         display: flex; 
         flex-direction: column;
     }
+    .product-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .product-container2 {
+        display: flex;
+        flex-direction: column-reverse;
+    }
     .video-container {
         display: grid;
         grid-gap: 1rem;
@@ -155,8 +229,7 @@ div {
     .video1 {
         grid-column: 1 / 2; 
         grid-row: 1;
-    }
-     
+    }  
     .video2 {
         grid-column: 1 / 2; 
         grid-row: 2;
@@ -170,7 +243,7 @@ div {
         flex-direction: column;
     }
     .product-text article{
-        height: 50vh; 
+        height: 60vh; 
     }
     .video-container {
         display: grid;
