--- a/fcc_product_landing_page/css/style.css
+++ b/fcc_product_landing_page/css/style.css
@@ -164,22 +164,38 @@ button {
     color: white; 
 }
 
+/*Video SectionStyles */
+.video-style {
+    background-color: #011F26; 
+    padding-top: 3rem; 
+    padding-bottom: 3rem; 
+}
 
-/*Video Section Styles*/
-.video-container {
+#video-section {
+    text-align: center;
+}
+
+.video-grid {
     display: grid;
-    grid-gap: .5rem;
-}
-  
-.video1 {
-    grid-column: 1;
-    grid-row: 1; 
-}
- 
-.video2 {
-    grid-column: 2;
-    grid-row: 1; 
-}
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    grid-gap: 2rem;
+    margin: 2rem;
+  }
+  .video-grid > section {
+    padding: 1rem;
+    display: grid;
+    place-items: center;
+  }
+  .video-grid > section::before {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+    grid-area: 1/1/2/2;
+  }
+  .video-grid > section iframe {
+    width: 100%;
+    grid-area: 1/1/2/2;
+  }
 
 #video {
     height: 50vh; 
@@ -204,19 +220,10 @@ button {
         height: 45vh; 
     }
     .masthead-info h1 {
-        font-size: 5rem; 
+        font-size: 4rem; 
     }
-    .video-container {
-        display: grid;
-        grid-gap: 1rem;
-    }     
-    .video1 {
-        grid-column: 1 / 2; 
-        grid-row: 1;
-    }  
-    .video2 {
-        grid-column: 1 / 2; 
-        grid-row: 2;
+    .video-grid {
+        margin: 2rem; 
     }
 }
 
@@ -224,19 +231,6 @@ button {
 @media (max-width: 600px) {
     #masthead {
         height: 35vh; 
-    }
-    .video-container {
-        display: grid;
-        grid-gap: 1rem;
-    }
-    .video1 {
-        grid-column: 1 / 2; 
-        grid-row: 1;
-    }
-     
-    .video2 {
-        grid-column: 1 / 2; 
-        grid-row: 2;
     }
 }
 
