--- a/fcc_product_landing_page/css/style.css
+++ b/fcc_product_landing_page/css/style.css
@@ -167,7 +167,7 @@ button {
     color: white; 
 }
 
-/*Video SectionStyles */
+/*Video Section Styles */
 .video-style {
     background-color: #011F26; 
     padding-top: 3rem; 
@@ -211,6 +211,51 @@ button {
     width: 100%; 
     border-radius: .25rem;
 }
+
+/*Footer Section Styles*/
+
+#footer {
+    background-color: #0F8C8C;  
+    padding-top: 3rem; 
+    padding-bottom: 3rem; 
+    text-align: center;
+}
+
+#email {
+    font-family: 'Work Sans', 'sans-serif';
+    font-size: 1rem;
+    width: 25%; 
+    height: 1.8rem;
+    padding: 0.25rem;
+    margin: 2rem 2rem 0 auto;
+    color: rgba(41, 41, 41, 0.397);
+    background-color: white;
+    border-radius: 0.3rem;
+    border: 1px solid #15BFAE;  
+}
+
+#email:focus {
+    border-color: #15BFAE;  
+    outline: 0; 
+    box-shadow: 0 0 0 0.2rem rgba(9, 108, 126, 0.596);
+}
+
+.footer-btn {
+    font-family: 'Work Sans', 'sans-serif';
+    background-color: #B2EBE2;
+    border: 1px solid #B2EBE2; 
+    padding: .75rem; 
+    width: auto; 
+    border-radius: 0px 50px;
+    color: #07524A; 
+}
+
+.footer-btn:hover {
+    background-color: transparent;
+    border: 1px solid white; 
+    color: white; 
+}
+
 
 /*Media Queries*/
 
