--- a/fcc_technical_documentation_page/css/style.css
+++ b/fcc_technical_documentation_page/css/style.css
@@ -76,6 +76,16 @@ body {
     margin-bottom: 110px;
   }
 
+  #main-doc header {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: white; 
+  }
+
+  #main-doc strong {
+    color: #6c8eef;
+  }
+
 /*Media Queries*/
 @media (max-width: 960px) {
         #navbar ul { 
