Fixed responsive styling on <!--Product Section-->

--- a/fcc_product_landing_page/css/style.css
+++ b/fcc_product_landing_page/css/style.css
@@ -104,37 +104,20 @@ button {
     color: white; 
 }
 
-/*Grid styling for Product Section and Video Section from Chris Coyier (A Grid of Squares)*/
-/* Product Section Styles */
-.product-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
+/*New Product Section*/
+.product-container, .product-container2 {
+    display: flex; 
+}
 
-.product-grid > div {
+.product-text{    
     background: #025159;
-    display: grid;
-    
-  }
-
-.product-grid > div::before {
-    content: "";
-    display: block;
-    grid-area: 1/1/2/2;
-  }
-
-.product-grid > div img {
-    width: 100%;
-    grid-area: 1/1/2/2;
+    width: 50vw; 
+    justify-content: center;
+    align-items: center;
 }
 
-.product-grid > div span {
-    padding-left: 3rem; 
-    padding-right: 3rem
-}
-
-.product-grid > div button {
-    margin-top: 4rem;
+.product-image {
+    width: 50vw;    
 }
 
 .product-button-style1 {
@@ -166,6 +149,12 @@ button {
     border: 1px solid white; 
     color: white; 
 }
+
+.product-img {
+    height: auto;
+    max-width: 100%; 
+}
+
 
 /*Video Section Styles */
 .video-style {
@@ -219,6 +208,7 @@ button {
     padding-top: 3rem; 
     padding-bottom: 3rem; 
     text-align: center;
+    width: 100%;
 }
 
 #email {
@@ -265,32 +255,45 @@ button {
         flex-direction: column;
     }
     #masthead {
-        height: 45vh; 
+        height: 450px; 
     }
     .masthead-info h1 {
         font-size: 4rem; 
     }
-    .product-grid > div span {
-        padding-left: 1rem; 
-        padding-right: 1rem
+    .product-container{
+        flex-wrap: wrap;
     }
-    .product-grid > div span p {
-        font-size: .6rem; 
+    .product-container2{
+        flex-wrap: wrap-reverse;
     }
-    .product-grid > div button {
-        margin-top: 1.75rem;
-        margin-bottom: .75rem; 
+    .product-text {
+        width: 100%; 
+        height: 1000px; 
+    }
+    .product-image {
+        width: 100%; 
+        height: 100%; 
     }
     .video-grid {
         margin: 3rem; 
         grid-gap: 4rem;
+    }
+    #footer {
+        width: 100%;
     }
 }
 
 /*Small Devices*/
 @media (max-width: 600px) {
     #masthead {
-        height: 35vh; 
+        height: 350px; 
+    }
+    .product-text {
+        width: 100%; 
+        height: 500px; 
+    }
+    #footer {
+        width: 100%;
     }
 }
 
