--- a/fcc_product_landing_page/css/style.css
+++ b/fcc_product_landing_page/css/style.css
@@ -237,12 +237,13 @@ button {
     width: 100%;
 }
 
+
 #email {
     font-family: 'Work Sans', 'sans-serif';
     font-size: 1rem;
-    width: 25%; 
-    height: 1.8rem;
-    padding: 0.25rem;
+    width: 40%; 
+    height: 2.25rem;
+    padding: 0.2rem;
     margin: 2rem 2rem 0 auto;
     color: rgba(41, 41, 41, 0.397);
     background-color: white;
@@ -283,21 +284,29 @@ button {
     #masthead {
         height: 55vh;        
     }
-    .masthead-info h1 {
-        font-size: 2.5rem; 
-    }
-    
+
     .masthead-text {
-        margin: 0 .25rem 2rem 5rem; 
-        padding: 2.5rem .25rem 0 .25rem;  
+        font-size: 2.5rem; 
+        margin: 0;
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%) 
     }
+
     .masthead-button {
-        margin: 0 auto 2rem 5rem;  
-        padding: 2.5rem .25rem 0 .25rem; 
         padding: .80rem; 
         width: auto;  
         font-size: .75rem;
+        margin: 0;
+        position: absolute;
+        top: 65%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%) 
     }
+
     .product-container {
         flex-wrap: wrap;
     }
@@ -320,7 +329,7 @@ button {
         margin-right: -50%;
         transform: translate(-50%, -50%) 
     }
-    .product-text p{
+    .product-text p {
         margin: 0;
         line-height: 1.5rem; 
         position: absolute;
@@ -354,9 +363,35 @@ button {
     #footer {
         width: 100%;
     }
+    #form {
+        display: flex; 
+        flex-wrap: wrap;
+    }
+
+    #email {
+        font-family: 'Work Sans', 'sans-serif';
+        font-size: 1rem;
+        text-align: center;
+        width: 75%; 
+        height: 3rem;
+        padding: 0.2rem;
+        margin: 2rem 2rem 0 auto;
+        color: rgba(41, 41, 41, 0.397);
+        background-color: white;
+        border-radius: 0.3rem;
+        border: 1px solid #15BFAE;  
+    }
+    .footer-btn {
+        margin: 2rem auto 0 auto; 
+        font-size: 1.05rem; 
+        padding: .85rem; 
+        width: auto; 
+        border-radius: 0px 50px;
+        color: #07524A; 
+    }
 }
 
-/*Small Devices*/
+/*Medium Devices*/
 @media (max-width: 600px) {
     .product-text {
         width: 100%; 
@@ -386,6 +421,76 @@ button {
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%) 
+    }
+    .video-div1 {
+        width: 85vw;
+        margin: .75rem auto 1.25rem auto;     
+    }  
+    .video-div2 {
+        width: 85vw;
+        margin: .5rem auto 1rem auto;   
+    }
+}
+
+/*Small Devices*/
+@media (max-width: 375px) {
+    .masthead-text {
+        font-size: 2rem; 
+        margin: 0;
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%) 
+    }
+    .masthead-button {
+        padding: .80rem; 
+        width: auto;  
+        font-size: .75rem;
+        margin: 0;
+        position: absolute;
+        top: 65%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%) 
+    }
+    .product-text {
+        width: 100%; 
+        height: 400px; 
+    }
+    .product-text h3 {
+        font-size: 2rem; 
+        margin: 0;
+        position: absolute;
+        top: 20%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%) 
+    }
+    .product-text p{
+        margin: 0;
+        line-height: 1.5rem; 
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%) 
+    }
+    .product-text button{
+        margin: 0;
+        position: absolute;
+        top: 85%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%) 
+    }
+    .video-div1 {
+        width: 85vw;
+        margin: .75rem auto 1.5rem auto;     
+    }  
+    .video-div2 {
+        width: 85vw;
+        margin: .5rem auto 1rem auto;   
     }
 }
 
