--- a/fcc_technical_documentation_page/css/style.css
+++ b/fcc_technical_documentation_page/css/style.css
@@ -24,7 +24,8 @@ body {
     left: 0; 
     padding: 30px 20px; 
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;  
+    z-index: 9; 
 }
 
 .nav-header {
@@ -87,6 +88,7 @@ body {
   }
 
 /*Code Styles*/
+/*FCC styling for code section*/
 .body-code {
     display: block; 
     background-color: #3c4257;
@@ -99,14 +101,15 @@ body {
     word-break: normal;
     word-wrap: normal;
     line-height: 2;
+    z-index: 0;
 }    
 
 .para-code {
     color: #4db7e8;
     background-color: #3c4257;
-    padding: 5.5px; 
+    padding: 3.75px; 
     border-radius: 7.5px; 
-    margin: 5.5px;   
+    margin: 4px;   
     white-space: pre-line;
     word-break: normal;
     word-wrap: normal;
