Additional copy to #loops section

--- a/fcc_technical_documentation_page/css/style.css
+++ b/fcc_technical_documentation_page/css/style.css
@@ -14,6 +14,9 @@ body {
 
 
 /*Navigation Styles*/
+/*Nav styling with assistance from Build a 
+JavaScript Responsive Sidebar Menu with 
+James Q Quick */
 #navbar {
     width: 250px; 
     height: 100vh; 
