--- a/fcc_personal_portfolio/resources/style.css
+++ b/fcc_personal_portfolio/resources/style.css
@@ -5,6 +5,10 @@
 }
 
 /*HTML (Universal) Styles*/
+body{
+    background-color: #361999; 
+}
+
 h1 {
     font-family: 'Alice', Helvetica, sans-serif;
     color: white; 
@@ -13,11 +17,12 @@ h1 {
 
 h2 {
     font-family: 'Alice', Helvetica, sans-serif;
-    color: white; 
+    color: #78FFF1; 
     font-size: 2rem; 
 }
 
 h3 {
+    color: white;  
     font-family: 'Epilogue'; 
 }
 
@@ -28,6 +33,7 @@ a {
 }
 
 /*Hover Styles*/
+/*Strikethrough hover from Codepen developer tsinemis*/
 span {
     position: relative;
     display: block;
@@ -89,7 +95,6 @@ span:hover:after {
 
 /*Masthead (Welcome) Section Styles*/
 #welcome-section {
-    background-color: #361999;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -100,7 +105,30 @@ span:hover:after {
 
 /*Project (Body) Section*/
 #projects {
-    background-color: #78FFF1;
+    text-align: center;
+}
+
+#projects h2 {
+    padding-bottom: 2rem;
+}
+
+.project-container {
+    display: grid; 
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 4rem; 
+    width: 100%;
+    margin: 0 auto;     
+    max-width: 1280px;
+}
+
+.project-image {
+    height: calc(100% - 5rem); 
+    width: 100%; 
+    object-fit: cover;
+}
+
+.project-title {
+    margin-top: 1.5rem; 
 }
 
 /*Media Queries*/
