--- a/fcc_personal_portfolio/resources/style.css
+++ b/fcc_personal_portfolio/resources/style.css
@@ -26,6 +26,14 @@ h3 {
     font-family: 'Epilogue'; 
 }
 
+p {
+    color: white;  
+    font-family: 'Epilogue'; 
+    padding-top: 1rem; 
+    padding-bottom: 1rem;
+    font-size: .5rem;   
+}
+
 a {
     font-family: 'Epilogue';
     color: white; 
@@ -135,6 +143,23 @@ span:hover:after {
 
 .project-title {
     margin-top: 1.5rem; 
+}
+
+/*Contact Section*/
+#contact {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#contact h2 {
+    padding-bottom: 2rem;
+}
+
+#profile-link {
+    padding-bottom: 3rem; 
 }
 
 /*Media Queries*/
