--- a/fcc_personal_portfolio/resources/style.css
+++ b/fcc_personal_portfolio/resources/style.css
@@ -109,7 +109,7 @@ span:hover:after {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 45vh; 
+    height: 100vh; 
 }
 
 /*Project (Body) Section*/
@@ -186,3 +186,5 @@ span:hover:after {
         grid-template-columns: 1fr;
     }
 }
+
+/*This is the stylesheet for my portfolio page*/
