--- a/video_ad3/css/style5.css
+++ b/video_ad3/css/style5.css
@@ -1,7 +1,10 @@
 @charset "utf-8"; 
+body{
+    box-sizing: border-box;
+    padding: 2rem;
+}
 
 .container {
-    padding: 2rem; 
     width: 970px; 
     height: 250px; 
     display: grid; 
